fix player layout to work on mobile landscape views 5

--- a/client/src/css/playersheet.css
+++ b/client/src/css/playersheet.css
@@ -3,7 +3,7 @@
   top: 2%;
   left: 2%;
   width: 95%;
-  height: 94vh;
+  height: 90vh;
   background-color: rgb(90, 2, 2);
   color: antiquewhite;
   padding: 10px;
